# clutch-explorer

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: Cargo.toml  Dockerfile
backend/config/: default.toml
backend/migrations/: 0001_init_explorer_schema.sql  0002_referrer_fees.sql  0003_account_activity.sql  0004_activity_count.sql
backend/src/: lib.rs  main.rs
backend/src/explorer/: activity.rs  app.rs  configuration.rs  db.rs  error.rs  handlers.rs  indexer.rs  ingestion.rs  mod.rs  models.rs  node_client.rs  node_repository.rs  postgres_repository.rs  referrer.rs  repository.rs  run.rs  seq.rs  shutdown.rs  state.rs  tracing.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/pages/: AddressPage.tsx  BlockDetailPage.tsx  BlocksPage.tsx  HomePage.tsx  TransactionDetailPage.tsx  TransactionsPage.tsx  ValidatorsPage.tsx
frontend/src/utils/: format.ts
